--- a/styles/components/reviews.css
+++ b/styles/components/reviews.css
@@ -167,8 +167,8 @@
   
   .reviews__swiper .swiper-button-prev,
   .reviews__swiper .swiper-button-next {
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     background-color: var(--color-bg-white);
     border: 1px solid rgba(254, 117, 63, 0.2);
     border-radius: 50%;
@@ -178,7 +178,7 @@
     bottom: 0;
     margin-top: 0;
   }
-  
+
   .reviews__swiper .swiper-button-prev:hover,
   .reviews__swiper .swiper-button-next:hover {
     background-color: #D84315; /* Darker orange for WCAG AA compliance (4.53:1 contrast) */
@@ -186,10 +186,10 @@
     border-color: #D84315;
     transform: scale(1.05);
   }
-  
+
   .reviews__swiper .swiper-button-prev::after,
   .reviews__swiper .swiper-button-next::after {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
   }
   
@@ -299,9 +299,12 @@
     /* Show pagination dots on desktop */
     .reviews__swiper .swiper-pagination {
       display: block;
+      position: absolute;
       bottom: 40px;
       left: 50%;
       transform: translateX(-50%);
+      text-align: center;
+      width: 100%;
     }
   
     .reviews__swiper .swiper-pagination-bullet {
